--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ before_script:
 build:
   stage: build
   script:
+    - docker build -t cmc_prebuild -f DockerfilePrebuild .
     - docker build --pull -t $CONTAINER_TEST_IMAGE .
     - docker push $CONTAINER_TEST_IMAGE
 
