--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
   stage: build
   script:
     - docker build -t cmc_prebuild -f DockerfilePrebuild .
-    - docker build -t $CONTAINER_TEST_IMAGE .
+    - docker build -t $CONTAINER_TEST_IMAGE -f Dockerfile .
     - docker push $CONTAINER_TEST_IMAGE
 
 rspec:
