--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,10 +42,11 @@ deploy:
   script:
     - 'which ssh-agent || ( apk update  && apk add openssh-client  )'
     - eval $(ssh-agent -s)
-    - ssh-add $(echo "$SSH_PRIVATE_KEY")
+    - apk add bash
+    - bash -c 'ssh-add < (echo "$SSH_PRIVATE_KEY")'
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - ssh root@staging.example.com "kubectl apply cmc_deploy/"
+    - ssh root@staging.example.com "kubectl rolling-update cmc_deploy/web_deployment.yml"
   only:
     - master
 
