--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy:
     - bash -c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - ssh root@aronwolf.tk "kubectl rolling-update cmc_deploy/web_deployment.yml"
+    - ssh root@aronwolf.tk "kubectl rolling-update -f cmc_deploy/web_deployment.yml"
   only:
     - master
 
