--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ rspec:
   stage: test
   script:
     - docker pull $CONTAINER_TEST_IMAGE
-    - docker run $CONTAINER_TEST_IMAGE rspec -e DATABASE_URL='postgres://root:password@postgres/root'
+    - docker run -e $CONTAINER_TEST_IMAGE rspec DATABASE_URL='postgres://root:password@postgres/root'
 
 release-image:
   stage: release
