try fix gitlab-cl rspec

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ rspec:
   script:
     - docker pull $CONTAINER_TEST_IMAGE
     - docker run -d -e POSTGRES_USER='root' -e POSTGRES_PASSWORD='password' -e POSTGRES_DB='root' postgres:latest
-    - docker run -e DATABASE_URL='postgres://root:password@postgres/root' $CONTAINER_TEST_IMAGE rspec
+    - docker run -e DATABASE_URL='postgres://root:password@db/root' --link=postgres:db $CONTAINER_TEST_IMAGE rspec
 
 release-image:
   stage: release
