try fix gitlab-cl rspec

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,7 @@ rspec:
   stage: test
   script:
     - docker pull $CONTAINER_TEST_IMAGE
-    - docker run -d -e POSTGRES_USER='root' -e POSTGRES_PASSWORD='password' -e POSTGRES_DB='root' postgres:latest
-    - docker ps
+    - docker run -d -e POSTGRES_USER='root' -e POSTGRES_PASSWORD='password' -e POSTGRES_DB='root' -name postgres postgres:latest
     - docker run -e DATABASE_URL='postgres://root:password@db/root' --link=postgres:db $CONTAINER_TEST_IMAGE rspec
 
 release-image:
