--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,10 @@ deploy:
     - bash -c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - ssh root@aronwolf.tk "kubectl set image deployment cmc-web cmc-web=$CONTAINER_RELEASE_IMAGE" --record
+    - sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CONTAINER_RELEASE_IMAGE/g" web_deployment.yml
+    - sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CONTAINER_RELEASE_IMAGE/g" migrate_job.yml
+    - ssh root@aronwolf.tk "kubectl replace -f cmc_deploy/web_deployment.yml -record
+    - ssh root@aronwolf.tk "kubectl apply -f cmc_deploy/migrate_job.yml --record
+    - ssh root@aronwolf.tk "bash -c 'cd cmc_deploy; git commit -am "deploy to image cmc:$CONTAINER_RELEASE_IMAGE'"
   only:
     - master
