--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,8 @@ deploy:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ssh root@aronwolf.tk 'sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g" cmc_deploy/web_deployment.yml'
     - ssh root@aronwolf.tk 'sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g" cmc_deploy/migrate_job.yml'
-    - ssh root@aronwolf.tk "kubectl replace -f cmc_deploy/web_deployment.yml -record"
+    - ssh root@aronwolf.tk "kubectl replace -f cmc_deploy/web_deployment.yml --record"
     - ssh root@aronwolf.tk "kubectl apply -f cmc_deploy/migrate_job.yml"
-    - ssh root@aronwolf.tk "bash -c \"cd cmc_deploy; git commit -am 'deploy to image cmc:$CONTAINER_RELEASE_IMAGE'; git push origin\""
+    - ssh root@aronwolf.tk "bash -c \"cd cmc_deploy; git commit -am 'deploy to image $CONTAINER_RELEASE_IMAGE'; git push origin\""
   only:
     - master
