--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ deploy:
     - ssh root@aronwolf.tk 'sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g" cmc_deploy/web_deployment.yml'
     - ssh root@aronwolf.tk 'sed -i -e "/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g" cmc_deploy/migrate_job.yml'
     - ssh root@aronwolf.tk "kubectl replace -f cmc_deploy/web_deployment.yml --record"
+    - ssh root@aronwolf.tk "kubectl delete -f cmc_deploy/migrate_job.yml"
     - ssh root@aronwolf.tk "kubectl apply -f cmc_deploy/migrate_job.yml"
     - ssh root@aronwolf.tk "bash -c \"cd cmc_deploy; git commit -am 'deploy to image $CONTAINER_RELEASE_IMAGE'; git push origin\""
   only:
