--- a/DockerfilePrebuild
+++ b/DockerfilePrebuild
@@ -1,22 +1,9 @@
 FROM ruby:2.4.2-alpine3.6
 
-RUN apk update
-RUN apk add git
-RUN apk add g++
-RUN apk add nodejs
-RUN apk add tzdata
-RUN apk add ruby-dev
-RUN apk add make
-RUN apk add postgresql-dev
-RUN apk add postgresql-client
-RUN apk add openssh-client
-RUN apk add bash
-RUN apk add nodejs-npm
-RUN apk add gnupg
+RUN alphine_install.sh
 
 COPY Gemfile Gemfile.lock ./
 
-RUN gem install bundler
 RUN bundle install
 
 COPY yarn.lock ./
@@ -24,10 +11,4 @@ COPY package.json ./
 
 ENV PATH /root/.yarn/bin:$PATH
 
-RUN apk add curl bash binutils tar \
-  && rm -rf /var/cache/apk/* \
-  && /bin/bash \
-  && touch ~/.bashrc \
-  && curl -o- -L https://yarnpkg.com/install.sh | bash \
-  && apk del git curl tar binutils
 RUN yarn install
