--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,6 @@ rspec:
   script:
     - ./alphine_shared_install.sh
     - bundle install
-    - ls /root/node_modules
     - ln -s /root/node_modules node_modules
     - yarn install
     - rspec
@@ -33,7 +32,7 @@ build:
     - docker:dind
   script:
     - docker build -t $CONTAINER_RELEASE_IMAGE .
-    - docker tag $CONTAINER_RELEASE_IMAGE CONTAINER_RELEASE_IMAGE_LATEST
+    - docker tag $CONTAINER_RELEASE_IMAGE $CONTAINER_RELEASE_IMAGE_LATEST
     - docker push $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE_LATEST
   only:
