improve js settup for tests
what was the problem: coverage was not displayed in the correct way
solution:
 - changes in the mocha config
 - changes in the webpack config for test
 - extract the js app configuration in a separate file to load it
   on tests, without iti, not all files are loaded.
   Mocha only load files on demand. Thear exist a --all flag
   but apearntly it does not work with vue files

--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,18 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": "> 1%",
-        "uglify": true
-      },
-      "useBuiltIns": true
-    }]
-  ],
-   "env": {
+  "env": {
+    "development": {
+      "presets": [
+        ["env", { "modules": false }]
+      ]
+    },
     "test": {
+      "presets": [
+        ["env", {
+          "modules": false,
+          "targets": { "node": "current" }
+        }]
+      ],
       "plugins": ["istanbul"]
     }
-  },
-  "plugins": [
-    "syntax-dynamic-import",
-    "transform-object-rest-spread",
-    ["transform-class-properties", { "spec": true }]
-  ]
+  }
 }
