--- a/package.json
+++ b/package.json
@@ -3,31 +3,16 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@std/esm": "^0.19.7",
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^1.3.0",
-    "bootstrap.native": "^2.0.21",
-    "chai": "^4.1.2",
-    "coffeescript": "1.12.7",
     "cross-env": "^5.1.3",
-    "es2016": "^0.0.0",
-    "expect": "^22.0.6",
-    "jest-serializer-vue": "^0.3.0",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^4.1.0",
-    "mocha-webpack": "^1.0.1",
     "nyc": "^11.4.1",
     "pug": "^2.0.0-rc.4",
-    "sinon": "^4.1.6",
-    "sinon-chai": "^2.14.0",
     "tui-editor": "^1.0.0",
     "vue": "^2.5.9",
-    "vue-awesome": "^2.3.4",
-    "vue-jest": "^1.4.0",
     "vue-loader": "^13.5.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
@@ -42,43 +27,32 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "jest": "^22.0.6",
-    "jest-vue-preprocessor": "^1.3.1",
+    "babel-plugin-istanbul": "^4.1.5",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "mocha-webpack": "^1.0.1",
     "regenerator-runtime": "^0.11.1",
+    "sinon": "^4.2.1",
+    "sinon-chai": "^2.14.0",
     "webpack-dev-server": "^2.9.5"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
-    },
-    "moduleDirectories": [
-      "node_modules",
-      "app/javascript"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/jest-serializer-vue"
-    ],
-    "mapCoverage": true
-  },
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc mocha-webpack --webpack-config config/webpack/test.js --require spec/mocha.js spec/javascript/**/*.spec.js"
+    "test": "cross-env NODE_ENV=test nyc  mocha-webpack --webpack-config config/webpack/test.js --require spec/mocha.js spec/javascript/**/*.spec.js",
+    "report": "cross-env NODE_ENV=test nyc report"
   },
   "nyc": {
-    "include": [
-      "src/**/*.(js|vue)"
+    "exclude": [
+      "spec/**/*",
+      "app/assets/**/*",
+      "public/**/*",
+      "config/**/*",
+      "tmp/**/*",
+      ".tmp/**/*"
     ],
-    "instrument": false,
-    "sourceMap": false
+    "extension": [
+      ".vue"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
