--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - gitlint
   - test
   - build
   - deploy
@@ -8,6 +9,15 @@ variables:
   CONTAINER_RELEASE_IMAGE: registry.gitlab.com/cmc_system/cmc/cmc:$CI_COMMIT_SHA
   CONTAINER_RELEASE_IMAGE_LATEST: registry.gitlab.com/cmc_system/cmc/cmc:latest
 
+gitlint:
+  stage: gitlint
+  image: python:3.7.0a4-alpine3.7
+  script:
+    - apk update
+    - apk add git
+    - pip install gitlint
+    - git log -1 --pretty=%B | gitlint
+ 
 rspec:
   stage: test
   image: registry.gitlab.com/cmc_system/cmc/cmc:test
