--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
+  "presets": [
+    ["env", {
+      "modules": false,
+      "targets": {
+        "browsers": "> 1%",
+        "uglify": true
+      },
+      "useBuiltIns": true
+    }]
+  ],
   "env": {
-    "development": {
-      "presets": [
-        ["env", { "modules": false }]
-      ]
-    },
     "test": {
       "presets": [
         ["env", {
