feature(API): add context, add records, token based security
What was done:
  - add context with current user as relationship
  - add create for reccord
  - add current record as realtionship on user
  - add cumcuber tests for the api
  - add teken based security that is compatible with devise

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - SPRING_SOCKET=tmp/sockets/spring_test.sock
 
   db_test:
-    image: postgres:latest
+    image: labianchin/docker-postgres-for-testing
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=password
