--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: registry.gitlab.com/cmc_system/cmc/cmc
-  tag: 0fedf6337358d7704227d053853e9aa477b06e42
+  tag: latest
 secret_key_base: 5d1ee3590cdac32f527d1c4c835578859ecbd50ac1b03ff6d4689c19d732b5c9050ceb66d8b625cacadb1c1228095a7fd855933ce1881075a577e7cb8aea3432
 enviroment: production
 remote: false
