--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ build:
 
 deploy:
   stage: deploy
-  image: registry.gitlab.com/cmc_system/cmc/cmc:test
+  image: lwolf/helm-kubectl-docker:latest
   script:
     - 'which ssh-agent || ( apk update  && apk add openssh-client  )'
     - eval $(ssh-agent -s)
@@ -84,11 +84,14 @@ deploy:
     - bash -c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - ssh root@aronwolf.tk "sed -i -E \"s/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g\" cmc_deploy/web_deployment.yml"
-    - ssh root@aronwolf.tk "sed -i -E \"s/cmc:[0-9a-fA-F]+/cmc:$CI_COMMIT_SHA/g\" cmc_deploy/migrate_job.yml"
-    - ssh root@aronwolf.tk "kubectl replace -f cmc_deploy/web_deployment.yml --record"
-    - ssh root@aronwolf.tk "kubectl delete -f cmc_deploy/migrate_job.yml"
-    - ssh root@aronwolf.tk "kubectl apply -f cmc_deploy/migrate_job.yml"
-    - ssh root@aronwolf.tk "bash -c \"cd cmc_deploy; git commit -am 'deploy to image $CONTAINER_RELEASE_IMAGE'; git push origin\""
+    - mkdir ~/.kube
+    - echo $KUBE_CONFIG | base64 -d > ~/.kube/config
+    - kubectl config use-context kubernetes-admin@kubernetes
+    - helm init
+    - export DEPLOYS=$(helm ls | grep cmc-production | wc -l)
+    - if [ ${DEPLOYS}  -eq 0 ]; then
+        helm install helm --name cmc-production --set image.tag=$CI_COMMIT_SHA --set remote=true;
+      else
+        helm upgrade cmc-production helm --set image.tag=$CI_COMMIT_SHA --set remote=true; fi
   only:
     - master
