--- a/helm/templates/web_deployment.yaml
+++ b/helm/templates/web_deployment.yaml
@@ -29,3 +29,5 @@ spec:
               value: {{ .Values.enviroment }}
             - name: RAILS_SERVE_STATIC_FILES
               value: "true"
+            - name: SENTRY_DSN
+              value: https://2c9ff5941e854f7d86b5b485068054a5:b2ef518f3a9b4a6ab4c8d5d6fc893357@sentry.io/289461
