--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,7 @@ deploy:
     - helm init
     - export DEPLOYS=$(helm ls | grep cmc-production | wc -l)
     - if [ ${DEPLOYS}  -eq 0 ]; then
-        helm install helm --name cmc-production --set image.tag=$CI_COMMIT_SHA --set remote=true;
+        helm install chart --name cmc-production --set image.tag=$CI_COMMIT_SHA --set remote=true;
       else
         helm upgrade cmc-production helm --set image.tag=$CI_COMMIT_SHA --set remote=true; fi
   only:
