--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "vue-search-select": "^2.4.0",
     "vue-store": "^0.3.1-moved",
     "vue-template-compiler": "^2.5.9",
-    "vue-test-utils": "^1.0.0-beta.11",
     "vue-turbolinks": "^2.0.0",
     "vuedraggable": "^2.15.0",
     "vuex": "^3.0.1",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.12",
     "babel-core": "^6.26.0",
     "babel-plugin-istanbul": "^4.1.5",
     "chai": "^4.1.2",
@@ -34,6 +34,7 @@
     "regenerator-runtime": "^0.11.1",
     "sinon": "^4.2.1",
     "sinon-chai": "^2.14.0",
+    "timekeeper": "^2.0.0",
     "webpack-dev-server": "^2.9.5"
   },
   "scripts": {
