--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-core": "^6.26.0",
     "babel-plugin-istanbul": "^4.1.5",
     "chai": "^4.1.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "mocha": "^5.0.0",
     "mocha-webpack": "^1.0.1",
     "regenerator-runtime": "^0.11.1",
@@ -38,7 +40,7 @@
     "webpack-dev-server": "^2.9.5"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc  mocha-webpack --webpack-config config/webpack/test.js --require spec/mocha.js spec/load_all.js spec/javascript/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test nyc  mocha-webpack --webpack-config config/webpack/test.js --require spec/mocha.js spec/load_all.js spec/javascript/**/*.spec.js spec/javascript/**/**/*.spec.js",
     "report": "cross-env NODE_ENV=test nyc report"
   },
   "nyc": {
