--- a/DockerfileDevelop
+++ b/DockerfileDevelop
@@ -1,11 +1,10 @@
-FROM ruby:2.4.2-alpine3.6
+FROM ruby:2.4.2-alpine3.7
 
 WORKDIR  /app
 
 ENV PATH /app/bin:/root/.yarn/bin:$PATH
 ENV BUNDLE_BIN /app/bin
 
+COPY alphine_minimum_shared_install.sh ./
 COPY alphine_shared_install.sh ./
 RUN /app/alphine_shared_install.sh
-
-COPY . /app
