--- a/DockerfileGitlab
+++ b/DockerfileGitlab
@@ -1,10 +1,11 @@
-FROM ruby:2.4.2-alpine3.6
+FROM ruby:2.4.2-alpine3.7
 
 WORKDIR  /app
 
 ENV PATH /root/.yarn/bin:$PATH
 ENV BUNDLE_BIN /app/bin
 
+COPY alphine_minimum_shared_install.sh ./
 COPY alphine_shared_install.sh ./
 RUN /app/alphine_shared_install.sh
 
