--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - POSTGRES_DB=root
     volumes:
       - db_volume:/var/lib/postgresql/data
+
   webpack:
     image: cmc
     command:  /bin/sh -c "bundle exec webpack-dev-server"
@@ -19,7 +20,7 @@ services:
       - node_modules:/app/node_modules
 
   spring:
-    build: .
+    image: cmc
     volumes:
       - .:/app
     command: spring server
@@ -29,12 +30,9 @@ services:
 
   web:
     image: cmc
-    build: .
     environment:
       - DATABASE_URL=postgres://root:password@db/root
       - SPRING_SOCKET=tmp/sockets/spring.sock
-      #- RAILS_ENV=production
-      #- SECRET_KEY_BASE=04e7dbda80b8aca916d937c278ff9b76f8cb7a3487dbbc47960442ec4d2f74f73f1bd47f7b499fee61c885e29ad2e7b22c169bcf5c5d4a1cf4eee9cddbe22e7d
     command:  /bin/sh -c "rm -r tmp/pids; rails s -b '0.0.0.0'"
     tty: true
     stdin_open: true
@@ -48,7 +46,7 @@ services:
       - db
 
   spring_test:
-    build: .
+    image: cmc
     volumes:
       - .:/app
     command: spring server
@@ -68,6 +66,7 @@ services:
     environment:
       - DATABASE_URL=postgres://root:password@db%5Ftest/root
       - SPRING_SOCKET=tmp/sockets/spring_test.sock
+      - RAILS_ENV=test
     volumes:
       - .:/app
       - bundle:/usr/local/bundle
