--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cross-env": "^5.1.3",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
+    "json-api-normalizer": "^0.4.10",
     "nyc": "^11.4.1",
     "pug": "^2.0.0-rc.4",
     "tui-editor": "^1.0.0",
