--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,13 +69,21 @@ mocha:
 cucumber:
   stage: test
   image: registry.gitlab.com/cmc_system/cmc/cmc:test
+  tags:
+    - selenium
   services:
     - postgres:latest
+    - name: selenium/standalone-chrome-debug:3.0.1-germanium
+      alias: selenium
   variables:
     POSTGRES_PASSWORD: password
     POSTGRES_DB: root
     POSTGRES_USER: root
     DATABASE_URL: postgres://root:password@postgres/root
+    SELENIUM_HOST: selenium
+    SELENIUM_PORT: 4444
+    TEST_PORT: 3001
+    RAILS_ENV: test
   script:
     - bundle install
     - yarn install
