--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -31,12 +31,12 @@ default: &default
 
 development:
   <<: *default
-  compile: true
+  compile: false
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
     https: false
-    host: localhost
+    host: webpack
     port: 3035
     public: 0.0.0.0:3035
     hmr: false
