--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sinon-chai": "^2.14.0",
     "sinon-stub-promise": "^4.0.0",
     "timekeeper": "^2.0.0",
+    "wait-until": "^0.0.2",
     "webpack-dev-server": "^2.9.5"
   },
   "scripts": {
