--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
 
   web:
     image: cmc
+    build:
+      dockerfile: DockerfileDevelop
+      context: .
     environment:
       - DATABASE_URL=postgres://root:password@db/root
     command:  /bin/sh -c "rm -r tmp/pids; rails s -b '0.0.0.0'"
@@ -58,7 +61,9 @@ services:
 
   test:
     image: cmc
-    scale: 0
+    build:
+      dockerfile: DockerfileDevelop
+      context: .
     environment:
       - DATABASE_URL=postgres://root:password@db%5Ftest/root
       - SPRING_SOCKET=tmp/sockets/spring_test.sock
