feat(api, vue.js): issues complexity support, minor conifg changes
- add complexity select box with the purpose
  to make later estimations
- some cleanup

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ eslint:
       eslint-plugin-promise
       eslint-plugin-vue
     - eslint app/javascript
+    - eslint spec/javascript
 
 rubocop:
   stage: lint
