--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,18 +37,7 @@ services:
       - node_modules:/app/node_modules
     depends_on:
       - db
-
-  spring_test:
-    image: cmc
-    volumes:
-      - .:/app
-      - bundle:/usr/local/bundle
-      - node_modules:/app/node_modules
-    command: spring server
-    environment:
-      - DATABASE_URL=postgres://root:password@db%5Ftest/root
-      - SPRING_SOCKET=tmp/sockets/spring_test.sock
-      - RAILS_ENV=test
+      - webpack
 
   db_test:
     image: labianchin/docker-postgres-for-testing
@@ -66,7 +55,6 @@ services:
       context: .
     environment:
       - DATABASE_URL=postgres://root:password@db%5Ftest/root
-      - SPRING_SOCKET=tmp/sockets/spring_test.sock
       - RAILS_ENV=test
       - SELENIUM_HOST=selenium
       - SELENIUM_PORT=4444
@@ -78,7 +66,6 @@ services:
       - node_modules:/app/node_modules
     depends_on:
       - db_test
-      - spring_test
       - selenium
 
   selenium:
