--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,6 +85,7 @@ cucumber:
     SELENIUM_PORT: 4444
     TEST_PORT: 3001
     RAILS_ENV: test
+    DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: 'true'
   script:
     - bundle install
     - yarn install
