feat(api, vue.js): board project select, refactor deserializer
- The select box on the board will allow scrith between project
  boards
- Because of the standart named JSON API there is a fixed
  structure in the deserailizer, adding methods that only need a
  name (map_attributes, map_relationships), make the deserializer
  esasier to read

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ cucumber:
     - selenium
   services:
     - postgres:latest
-    - name: selenium/standalone-chrome-debug:3.0.1-germanium
+    - name: selenium/standalone-chrome-debug:latest
       alias: selenium
   variables:
     POSTGRES_PASSWORD: password
@@ -88,8 +88,8 @@ cucumber:
     DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: 'true'
   script:
     - bundle install
-    - yarn install
     - ln -s /root/node_modules node_modules
+    - yarn install
     - cucumber
 
 build:
