--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@std/esm": "^0.19.7",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^1.3.0",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "cross-env": "^5.1.3",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
