fix(models, vue.js): there was errors on move issues
- loading betwenn calls cause issue lose board_list.
  to prevent this kind of problems a board_list_id not NUll
  constrain was set on the database
- sort not updated inside board_list because rails
  not thought there is no update when the ordr change

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsdom-global": "^3.0.2",
     "json-api-normalizer": "^0.4.10",
     "nyc": "^11.4.1",
+    "p-queue": "^2.4.2",
     "pug": "^2.0.0-rc.4",
     "tui-editor": "^1.0.0",
     "vue": "^2.5.9",
