--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
     "@std/esm": "^0.19.7",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.9",
@@ -11,17 +12,22 @@
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
     "json-api-normalizer": "^0.4.10",
+    "node-sass": "^4.9.0",
     "nyc": "^11.4.1",
     "p-queue": "^2.4.2",
-    "pug": "^2.0.0-rc.4",
+    "postcss-smart-import": "^0.7.6",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "tui-editor": "^1.0.0",
-    "vue": "^2.5.9",
-    "vue-loader": "^13.5.0",
+    "vue": "^2.5.16",
+    "vue-loader": "14.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-search-select": "^2.4.0",
     "vue-store": "^0.3.1-moved",
-    "vue-template-compiler": "^2.5.9",
+    "vue-template-compiler": "^2.5.16",
     "vue-turbolinks": "^2.0.0",
     "vuedraggable": "^2.15.0",
     "vuex": "^3.0.1",
