fix(mvc): displayed spent time per day/month
The problem:
  - paggination was interfering into the correct calculations
  - there was other related bugs caused be the big complexity.

The solution:
  - Add sql view support (RecordDay): this allow pagginate per days
    instead per records
  - put Records::IndexOperation steps into different classes and
    introduce the calculation pattern

--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -24,7 +24,7 @@ RemoveEmptyHelpersCheck: { }
 #RemoveTabCheck: { }
 RemoveTrailingWhitespaceCheck: { }
 #RemoveUnusedMethodsInControllersCheck: { except_methods: [] }
-RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
+#RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [User#authenticate, Context#current_user_id] }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
 ReplaceInstanceVariableWithLocalVariableCheck: { ignored_files: "_side_menu.html.slim" }
